# omero-demo2025

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
omero_demo2025/: urls.py  views.py
omero_demo2025/templates/omero_demo2025/: index.html  tracker.html
test/integration/: test_index.py
